--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    android:orientation="vertical"
+
+    android:id="@+id/layout_for_Fragment"
     tools:showIn="@layout/app_bar_main">
-
-    <ImageView
-        android:id="@+id/student"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
-    <ImageView
-        android:id="@+id/theacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_gallery"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/student"
+            android:layout_width="wrap_content"
+            android:layout_height="210dp"
+            android:src="@drawable/nisit"/>
+        <ImageView
+            android:id="@+id/theacher"
+            android:layout_below="@+id/student"
+            android:layout_width="wrap_content"
+            android:layout_height="210dp"
 
-        />
+            android:src="@drawable/teacher"
 
-</LinearLayout>
+            />
+    </RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
